fix up spacing

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -44,13 +44,17 @@
 .Navigation {
   list-style: none;
   box-sizing: border-box;
-  padding: 2rem 2rem 4rem;
+  padding: 2rem 1rem 4rem;
   display: flex;
   justify-content: space-between;
   width: 100%;
   max-width: $width-medium;
   position: absolute;
   z-index: 10;
+
+  @media screen and (min-width: $width-medium) {
+    padding: 2rem 0 4rem;
+  }
 }
 
 .Logo {
